# studies-schedule-sync

./: .gitignore  README.md  main.py  pyproject.toml  var.env
.github/workflows/: sync_with_gcal.yml
lib/: datatypes.py  gcal.py  gcal_mapper.py  schedule_parser.py  settings.py
